--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta property="og:description" content="AFEF — Community-driven fan token. Contract, roadmap, and early airdrop info." />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="AFEF Token" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚔️</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2224%22 height=%2224%22 viewBox=%220 0 24 24%22 fill=%22none%22 stroke=%22%23d4a23a%22 stroke-width=%222%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22><path d=%22M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z%22></path><path d=%22M2 12l10 4 10-4%22></path><path d=%22M12 22V12%22></path></svg>">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     <style>
         :root {
             --bg: #061425;
-            --card: #071827;
+            --card: rgba(7, 24, 39, 0.7);
             --accent: #d4a23a;
             --muted: #9fb0c2;
             --maxw: 1100px;
@@ -28,7 +28,8 @@
         body {
             margin: 0;
             font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', sans-serif;
-            background: linear-gradient(180deg, var(--bg) 0%, #051021 100%);
+            background-color: var(--bg);
+            background-image: linear-gradient(180deg, var(--bg) 0%, #051021 100%);
             color: #eaf6ff;
             -webkit-font-smoothing: antialiased;
             overflow-x: hidden;
@@ -58,7 +59,7 @@
             position: sticky;
             top: 0;
             background: rgba(6, 20, 37, 0.85);
-            backdrop-filter: blur(8px);
+            backdrop-filter: blur(10px);
             border-bottom: 1px solid rgba(212, 162, 58, 0.15);
             z-index: 100;
         }
@@ -70,13 +71,11 @@
             justify-content: space-between;
             padding: 14px 20px;
         }
-        .brand { display: flex; align-items: center; gap: 12px; }
+        .brand { display: flex; align-items: center; gap: 12px; text-decoration: none; }
         .logo-wrap {
             width: 44px; height: 44px;
             border-radius: 10px;
-            background: linear-gradient(180deg, #3b2b12, #6f4c21);
             display: flex; align-items: center; justify-content: center;
-            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.5);
         }
         .logo-text {
             font-family: 'Cinzel', serif;
@@ -87,35 +86,47 @@
         .nav-links { display: flex; gap: 24px; align-items: center; }
         .nav-links a { font-weight: 600; color: #dfeef9; font-size: 0.95rem; text-decoration: none; transition: color 0.2s; }
         .nav-links a:hover { color: var(--accent); }
-        .cta-small {
-            background: var(--accent);
-            color: #081426;
-            padding: 8px 14px;
-            border-radius: 10px;
-            font-weight: 700;
-            font-size: 0.9rem;
-            text-decoration: none;
-            transition: background 0.2s;
+        
+        [data-netlify-identity-menu] button {
+             background: transparent; border: 1px solid var(--accent); color: var(--accent);
+             padding: 8px 14px; border-radius: 10px; font-weight: 700; font-size: 0.9rem;
+             cursor: pointer; transition: all 0.2s;
         }
-        .cta-small:hover { background: #ffbf47; color: #081426; }
+        [data-netlify-identity-menu] button:hover { background: var(--accent); color: #081426; }
+
         .hamburger { display: none; }
 
         /* HERO SECTION */
         header.hero {
             padding: 80px 20px;
             text-align: center;
+            position: relative;
+            background-image: linear-gradient(rgba(6, 20, 37, 0.9), rgba(6, 20, 37, 1)), url(https://images.pexels.com/photos/167684/pexels-photo-167684.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+            background-size: cover;
+            background-position: center;
+            border-bottom: 1px solid rgba(212, 162, 58, 0.2);
         }
-        .hero-inner { max-width: 750px; margin: 0 auto; }
+        .hero-inner {
+            display: grid;
+            grid-template-columns: 2fr 1fr;
+            max-width: var(--maxw);
+            margin: 0 auto;
+            gap: 40px;
+            align-items: center;
+            text-align: left;
+        }
         .hero h1 {
             font-family: 'Cinzel', serif;
-            font-size: clamp(2.5rem, 6vw, 4rem);
+            font-size: clamp(2.8rem, 7vw, 4.5rem);
             margin: 0 0 16px;
             color: var(--accent);
-            text-shadow: 0 0 30px rgba(212, 162, 58, 0.3);
+            text-shadow: 0 0 30px rgba(212, 162, 58, 0.4);
             letter-spacing: 1px;
+            line-height: 1.1;
+            text-align: left;
         }
-        .hero p { color: var(--muted); font-size: 1.1rem; margin: 0 0 24px; line-height: 1.7; }
-        .hero-actions { display: flex; gap: 12px; justify-content: center; flex-wrap: wrap; }
+        .hero p { color: var(--muted); font-size: 1.1rem; margin: 0 0 24px; line-height: 1.7; text-align: left; }
+        .hero-actions { display: flex; gap: 12px; flex-wrap: wrap; }
         .btn {
             padding: 14px 22px;
             border-radius: var(--radius);
@@ -126,35 +137,46 @@
             display: inline-block;
             transition: all 0.2s;
         }
-        .btn:hover { transform: translateY(-2px); box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2); }
+        .btn:hover { transform: translateY(-3px); box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3); }
         .btn-primary {
             background: linear-gradient(90deg, var(--accent), #ffd36a);
             color: #061426;
-            box-shadow: 0 10px 30px rgba(212, 162, 58, 0.2);
+            box-shadow: 0 10px 30px rgba(212, 162, 58, 0.25);
         }
         .btn-outline {
             background: transparent;
             border: 1px solid rgba(255, 255, 255, 0.1);
             color: #dfeef9;
         }
+        .hero-logo-container {
+            animation: float 6s ease-in-out infinite;
+        }
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-20px); }
+            100% { transform: translateY(0px); }
+        }
 
         /* SECTIONS & CARDS */
-        .section { max-width: var(--maxw); margin: 60px auto; padding: 0 20px; }
+        .section { max-width: var(--maxw); margin: 80px auto; padding: 0 20px; }
         .section h2 { font-family: 'Cinzel', serif; font-size: 2.5rem; color: var(--accent); margin-bottom: 16px; text-align: center; }
-        .section-subtitle { text-align: center; color: var(--muted); margin-top: -10px; margin-bottom: 32px; }
+        .section-subtitle { text-align: center; color: var(--muted); margin-top: -10px; margin-bottom: 32px; max-width: 600px; margin-left: auto; margin-right: auto; }
         .grid { display: grid; gap: 20px; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); }
         .card {
             background: var(--card);
             padding: 24px;
             border-radius: var(--radius);
             border: 1px solid rgba(255, 255, 255, 0.05);
-            box-shadow: 0 8px 30px rgba(3, 6, 11, 0.6);
+            box-shadow: 0 8px 40px rgba(3, 6, 11, 0.7);
+            transition: transform 0.3s ease, border-color 0.3s ease;
         }
+        .card:hover { transform: translateY(-5px); border-color: rgba(212, 162, 58, 0.3); }
         .card h3 { margin: 0 0 8px; color: #fff; font-size: 1.1rem; }
         .muted { color: var(--muted); font-size: 1rem; line-height: 1.6; }
 
         /* CONTACT SECTION */
         #contact p { text-align: center; }
+        .contact-links a { display: block; margin-bottom: 8px; font-weight: 600; }
 
         /* FOOTER */
         footer {
@@ -169,6 +191,10 @@
 
         /* Responsive */
         @media (max-width: 960px) {
+            .hero-inner { grid-template-columns: 1fr; text-align: center; }
+            .hero-right { display: none; } /* Hide the animated logo on mobile to save space */
+            .hero-left, .hero p, .hero h1 { text-align: center; }
+            .hero-actions { justify-content: center; }
             .nav-links {
                 display: none;
                 flex-direction: column;
@@ -193,10 +219,12 @@
 
     <nav>
         <div class="nav-inner">
-            <a href="#" class="brand" style="text-decoration:none;">
+            <a href="#" class="brand">
                 <div class="logo-wrap">
-                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 1L14.4 6.6L20.5 7.4L15.8 11.3L17.2 17.3L12 14.4L6.8 17.3L8.2 11.3L3.5 7.4L9.6 6.6L12 1Z" fill="#D4A23A"/>
+                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5 11.23C5 14.21 6.33 16.94 8.21 18.73L12 22.5L15.79 18.73C17.67 16.94 19 14.21 19 11.23V5.5L12 2.5L5 5.5V11.23Z" stroke="#D4A23A" stroke-width="1.5" stroke-linejoin="round"/>
+                        <path d="M15 6.4C14.2 6.6 13.1 7.2 12 7.2C10.9 7.2 9.8 6.6 9 6.4L12 4.5L15 6.4Z" stroke="#D4A23A" stroke-width="1.5" stroke-linejoin="round"/>
+                        <path d="M9 6.4V9.2C9.8 9.4 10.9 10.2 12 10.2C13.1 10.2 14.2 9.4 15 9.2V6.4" stroke="#D4A23A" stroke-width="1.5" stroke-linejoin="round"/>
                     </svg>
                 </div>
                 <div class="logo-text">AFEF Token</div>
@@ -214,12 +242,37 @@
 
     <header class="hero">
         <div class="hero-inner">
-            <h1>AFEF Token</h1>
-            <p>A community-driven fan token for strategy enthusiasts. Early participants benefit from transparent distribution, future integrations, and rewards.</p>
-            <div class="hero-actions">
-                <a href="#web3" class="btn btn-primary">Connect Wallet</a>
-                <a href="https://app.uniswap.org/swap" target="_blank" class="btn btn-outline">Trade on Uniswap</a>
+            <div class="hero-left">
+                <h1>AFEF Token</h1>
+                <p class="muted">A community-driven fan token for strategy enthusiasts. Early participants benefit from transparent distribution, future integrations, and rewards.</p>
+                <div class="hero-actions">
+                    <a href="#web3" class="btn btn-primary">Connect Wallet</a>
+                    <a href="https://app.uniswap.org/swap" target="_blank" class="btn btn-outline">Trade Token</a>
+                </div>
             </div>
+
+            <aside class="hero-right">
+                <div class="hero-logo-container">
+                    <svg width="250" height="250" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <defs>
+                            <linearGradient id="shieldGradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                <stop offset="0%" style="stop-color:#1E1208; stop-opacity:1" />
+                                <stop offset="100%" style="stop-color:#0F0B07; stop-opacity:1" />
+                            </linearGradient>
+                            <filter id="glow" x="-50%" y="-50%" width="200%" height="200%">
+                                <feGaussianBlur stdDeviation="1.5" result="coloredBlur"/>
+                                <feMerge>
+                                    <feMergeNode in="coloredBlur"/>
+                                    <feMergeNode in="SourceGraphic"/>
+                                </feMerge>
+                            </filter>
+                        </defs>
+                        <path d="M5 11.23C5 14.21 6.33 16.94 8.21 18.73L12 22.5L15.79 18.73C17.67 16.94 19 14.21 19 11.23V5.5L12 2.5L5 5.5V11.23Z" fill="url(#shieldGradient)" stroke="#D4A23A" stroke-width="0.5" filter="url(#glow)"/>
+                        <path d="M15 6.4C14.2 6.6 13.1 7.2 12 7.2C10.9 7.2 9.8 6.6 9 6.4L12 4.5L15 6.4Z" stroke="#D4A23A" stroke-width="0.7" stroke-linejoin="round"/>
+                        <path d="M9 6.4V9.2C9.8 9.4 10.9 10.2 12 10.2C13.1 10.2 14.2 9.4 15 9.2V6.4" stroke="#D4A23A" stroke-width="0.7" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+            </aside>
         </div>
     </header>
 
@@ -231,7 +284,7 @@
 
         <section id="tokenomics" class="section">
             <h2>Tokenomics</h2>
-            <p class="section-subtitle">Total Supply: <strong>1,000,000,000 AFEF</strong></p>
+            <p class="section-subtitle">Total Supply: <strong>4,950,000 AFEF</strong></p>
             <div class="grid">
                 <div class="card"><h3>40% Liquidity Pool</h3><p class="muted">A significant portion is locked in liquidity pools to ensure market stability and trust.</p></div>
                 <div class="card"><h3>30% Airdrop & Community</h3><p class="muted">Dedicated to rewarding our early adopters, supporters, and active community members.</p></div>
@@ -254,21 +307,21 @@
         <section id="web3" class="section">
             <h2>Web3 Integration</h2>
             <p class="section-subtitle">Connect your wallet to check your AFEF balance and interact with our platform.</p>
-            <div class="card" style="text-align: center; max-width: 400px; margin: 0 auto;">
+            <div class="card" style="text-align: center; max-width: 450px; margin: 0 auto;">
                 <h3 id="wallet-status">Wallet Not Connected</h3>
-                <p class="muted">Your AFEF Balance: <strong id="balance">--</strong></p>
+                <p class="muted">Your AFEF Balance: <strong id="balance" style="color: var(--accent); font-size: 1.2rem;">--</strong></p>
                 <button class="btn btn-primary" style="margin-top: 16px;" id="connect-wallet-btn">Connect Wallet</button>
             </div>
         </section>
 
         <section id="contact" class="section">
             <h2>Contact & Community</h2>
-            <p class="section-subtitle">Have questions or want to collaborate? Reach out to us.</p>
-            <p style="text-align:center; margin-top:12px; font-weight: 600;">
-                Email: <a href="mailto:empiresfantoken@outlook.com">empiresfantoken@outlook.com</a><br>
-                Telegram: <a href="https://t.me/afeftoken" target="_blank">t.me/afeftoken</a><br>
-                X (Twitter): <a href="https://x.com/afeftoken?s=21" target="_blank">@afeftoken</a>
-            </p>
+            <p class="section-subtitle">Have questions, feedback, or want to collaborate? Reach out to us.</p>
+            <div class="contact-links" style="text-align:center; margin-top:12px; font-weight: 600; line-height: 2;">
+                <a href="mailto:empiresfantoken@outlook.com">Email: empiresfantoken@outlook.com</a>
+                <a href="https://t.me/afeftoken" target="_blank">Telegram: t.me/afeftoken</a>
+                <a href="https://x.com/afeftoken?s=21" target="_blank">X (Twitter): @afeftoken</a>
+            </div>
         </section>
     </main>
 
@@ -290,30 +343,25 @@
             navLinks.classList.toggle('active');
         });
 
-        // Function to close the menu
         function closeMenu() {
             if (navLinks.classList.contains('active')) {
                 navLinks.classList.remove('active');
             }
         }
 
-        // Close menu when a link is clicked
         allNavLinksInMenu.forEach(link => {
             link.addEventListener('click', closeMenu);
         });
         
-        // NEW: Close menu when clicking outside of it
         document.addEventListener('click', function(event) {
             const isClickInsideNav = navLinks.contains(event.target);
             const isClickOnHamburger = hamburger.contains(event.target);
-
             if (!isClickInsideNav && !isClickOnHamburger) {
                 closeMenu();
             }
         });
 
-
-        // --- Web3 Placeholder Logic ---
+        // Web3 Logic
         const connectWalletBtn = document.getElementById('connect-wallet-btn');
         const walletStatusEl = document.getElementById('wallet-status');
         const balanceEl = document.getElementById('balance');
@@ -334,12 +382,10 @@
                     walletStatusEl.textContent = 'Connection Failed';
                 }
             } else {
-                // Improved User Experience for mobile
                 const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
                 if (isMobile) {
                     alert('To use this feature, please open this site in the MetaMask app browser.');
-                    // Optional: Try to deep link to MetaMask
-                    window.location.href = 'https://metamask.app.link/dapp/afeftoken.netlify.app';
+                    window.location.href = `https://metamask.app.link/dapp/${window.location.host}`;
                 } else {
                     alert('MetaMask is not installed. Please install the browser extension to use this feature.');
                 }
